feat (update): reset the routes and update the yarn.lock file

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_flags = ["nodejs_compat"]
 assets = { directory = "./public", binding = "ASSETS", html_handling = "force-trailing-slash", not_found_handling = "404-page" }
 # services = [ { binding = "APP", service = "otto-app-ts" }, { binding = "D1", service = "otto-db" } ]
 routes = [
-	{ pattern = "ottocratesolver.com", custom_domain = true },
+	{ pattern = "ottocratesolver.com/app", zone_name = "ottocratesolver.com"},
 	{ pattern = "app.ottocratesolver.com/app*", zone_name = "ottocratesolver.com" }
 ]
 
